--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -2,7 +2,11 @@
   <ion-grid>
     <ion-row>
       <ion-col size-lg="6" size-md="6" offset-md="3 " size-sm="6" size="12">
-        <ion-slides pager>
+
+
+
+
+        <ion-slides pager='{{!isDesktop}}'  #theSlides [options]="slideOpts">
           <ion-slide>
             <!-- <app-logo></app-logo> -->
             <img src="assets/img/LOGOMARK.png" alt="Chong Hua Hospital">
@@ -23,6 +27,10 @@
               appreciate it!
             </h3>
             <p>Swipe left to see what we've built for you.</p>
+            <ion-button *ngIf="isDesktop" (click)="moveToNext(theSlides)"><ion-icon name="chevron-forward-outline"></ion-icon></ion-button>  
+
+
+            
           </ion-slide>
           <ion-slide>
             <h1>View your admitted patients.</h1>
@@ -41,6 +49,8 @@
               You will be notified via SMS when you have patients admitted in
               the hospital on both sites (Cebu and Mandaue).
             </p>
+            <ion-button *ngIf="isDesktop" (click)="moveToPrev(theSlides)"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>  
+            <ion-button *ngIf="isDesktop" (click)="moveToNext(theSlides)"><ion-icon name="chevron-forward-outline"></ion-icon></ion-button>  
           </ion-slide>
           <ion-slide>
             <h1>View patient appointments.</h1>
@@ -60,6 +70,8 @@
               now view a list of patients that are expected to visit your
               clinic.
             </p>
+            <ion-button *ngIf="isDesktop" (click)="moveToPrev(theSlides)"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>  
+            <ion-button *ngIf="isDesktop" (click)="moveToNext(theSlides)"><ion-icon name="chevron-forward-outline"></ion-icon></ion-button>  
           </ion-slide>
           <ion-slide>
             <h1>Submit professional fee online.</h1>
@@ -86,6 +98,8 @@
 
               </ion-col>
             </ion-row>
+            <ion-button *ngIf="isDesktop" (click)="moveToPrev(theSlides)"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>  
+
           </ion-slide>
         </ion-slides>
       </ion-col>
