--- a/src/app/tab-dashboard/tab-dashboard.page.html
+++ b/src/app/tab-dashboard/tab-dashboard.page.html
@@ -25,7 +25,7 @@
       <ion-col size-xs="6" >
 
 
-          <ion-item lines="none" routerLink='/menu/in-patients/AC' routerDirection="back">
+          <ion-item id="ion-item-ac" lines="none" routerLink='/menu/in-patients/AC' routerDirection="back">
             <ion-avatar slot="start">
               <chh-app-text-avatar [text]='admitted' [color]=""></chh-app-text-avatar>
             </ion-avatar>
@@ -37,7 +37,7 @@
           </ion-item>
       </ion-col>
       <ion-col size-xs="6" >
-          <ion-item lines="none" routerLink='/menu/in-patients/DN' routerDirection="back">
+          <ion-item id="ion-item-dn" lines="none" routerLink='/menu/in-patients/DN' routerDirection="back">
             <ion-avatar slot="start">
               <chh-app-text-avatar [text]='discharge' [color]=""></chh-app-text-avatar>
             </ion-avatar>
