updated privacy policy

--- a/src/global.scss
+++ b/src/global.scss
@@ -75,6 +75,17 @@
    position: absolute; 
    display: block;  
 }
+
+.my-privacy-modal-css .modal-wrapper {
+  height: 40%;
+  width: 40%;
+  top: 15;
+  position: absolute; 
+  display: block;  
+}
+
+
+
 .pointer {cursor: pointer;}
  .my-custom-modal-css .modal-wrapper {
    height: 45%;
