--- a/src/app/tab-settings/tab-settings.page.html
+++ b/src/app/tab-settings/tab-settings.page.html
@@ -81,6 +81,20 @@
                   <ion-toggle disabled="true"></ion-toggle>
                 </ion-item>
                 <ion-item>
+                  <ion-label class="ion-text-wrap">Privacy Policy</ion-label>
+
+                  <ion-toggle
+                    color="mango"
+                    [(ngModel)]="privacyPolicy"
+                    (ionChange)="optoutofprivacy($event)"
+                  ></ion-toggle>
+                </ion-item>
+                <ion-item>
+                  <ion-label class="ion-text-wrap">View Privacy Policy</ion-label>
+                  <ion-icon slot="end" name="lock-closed-outline" (click)="viewPrivacyPolicy() "></ion-icon>
+                 
+                </ion-item>               
+                <ion-item>
                   <br />
                 </ion-item>
 
