privacy policy API

--- a/src/app/tab-settings/tab-settings.page.html
+++ b/src/app/tab-settings/tab-settings.page.html
@@ -60,8 +60,8 @@
                   >
                   <ion-toggle
                     color="mango"
-                    disabled="true"
-                    checked="true"
+                    disabled
+                    [(ngModel)]="smsAdmitted"
                   ></ion-toggle>
                 </ion-item>
                 <ion-item>
@@ -70,8 +70,8 @@
                   >
                   <ion-toggle
                     color="mango"
-                    disabled="true"
-                    checked="true"
+                    disabled
+                    [(ngModel)]="smsAdmitted"
                   ></ion-toggle>
                 </ion-item>
                 <ion-item>
