--- a/src/app/tab-settings/tab-settings.page.html
+++ b/src/app/tab-settings/tab-settings.page.html
@@ -113,7 +113,19 @@
                     (ionChange)="onDarkModeEnable($event)"
                   ></ion-toggle>
                 </ion-item>
+                <ion-item>
+                  <br />
+                </ion-item>
 
+                <ion-item>
+                  <ion-icon name="reader-outline" slot="end"></ion-icon>
+                  <b>Terms & Conditions</b>
+                </ion-item>
+                <ion-item>
+                  <ion-label class="ion-text-wrap" (click)="viewTermsAndCondition()">
+                    View</ion-label>
+                  
+                </ion-item>
                 <ion-item>
                   <br />
                 </ion-item>
