--- a/src/app/chh-web-components/chh-app-privacy-policy/chh-app-privacy-policy.page.html
+++ b/src/app/chh-web-components/chh-app-privacy-policy/chh-app-privacy-policy.page.html
@@ -11,7 +11,7 @@
       slot="end"
       class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated"
     >
-      <ion-button (click)="closeModal()" color="chh-css-primary2"
+      <ion-button id="buttonPrivatePolicyAlertClose" (click)="closeModal()" color="chh-css-primary2"
         >Close&nbsp; <ion-icon name="close-outline"></ion-icon
       >
     
