--- a/src/app/tab-settings/tab-settings.page.html
+++ b/src/app/tab-settings/tab-settings.page.html
@@ -83,7 +83,7 @@
                 <ion-item>
                   <ion-label class="ion-text-wrap">Privacy Policy</ion-label>
 
-                  <ion-toggle
+                  <ion-toggle id="dataPrivacyToggle"
                     color="mango"
                     [(ngModel)]="privacyPolicy"
                     (ionChange)="optoutofprivacy($event)"
