--- a/src/app/chh-web-components/chh-app-privacy-policy/chh-app-privacy-policy.page.html
+++ b/src/app/chh-web-components/chh-app-privacy-policy/chh-app-privacy-policy.page.html
@@ -3,7 +3,7 @@
     class="in-toolbar ios toolbar-title-default hydrated"
     color="mango"
   >
-    <ion-title> <ion-icon name="lock-closed-outline"></ion-icon> Privacy Policy </ion-title>
+    <ion-title> <ion-icon name="lock-closed-outline"></ion-icon> DATA PRIVACY NOTICE </ion-title>
     <!--ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
       <ion-button (click)="closeModal()" routerDirection="back" class="ios button button-clear ion-activatable ion-focusable hydrated">Close</ion-button>
     </ion-buttons-->
@@ -30,7 +30,24 @@
          
           <ion-list>
             <ion-item style="padding-top: 10px;">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              This is to inform you of our policies regarding the collection, use, storage, disclosure, and disposal of personal information we receive from the users.<br /><br />
+              Chong Hua Hospital is committed to ensuring that your personal information and/or the sensitive personal information of your patients are protected and secured. Should we ask you to provide certain information, by which you can be identified you can be assured that it will only be used in accordance with the law and this Data Privacy Notice. Moreover, you are prohibited to share your password or login details. <br /><br />
+              We shall use your personal information to provide you services.<br /><br />
+              For you to avail of our services, we may require you to submit sensitive personal information in order to process your online transactions, such as: <br /><br />
+              a. Full Name;<br />
+              b. Birth Date; <br />
+              c. Place of Birth;<br />
+              d. Home Address;<br />
+              e. Gender;<br />
+              f. Civil Status; <br /><br />
+              By using our services, you consent to the processing of your sensitive personal information in accordance with this Data Privacy Notice. <br /><br />
+              We are committed to ensuring the safety and security of your sensitive personal information.<br /><br />
+              Nevertheless, keep in mind that no method of transmission over the internet or method of electronic storage will guarantee full security. In order to prevent unauthorized access or disclosure, we have implemented physical, technical and organizational measures and procedures to safeguard the data we collect from you. While we use such means and methods to protect your personal data, we cannot guarantee its absolute security.<br /><br />
+              Please be informed also that you can access the laboratory and diagnostic results of your admitted patients, therefore you are duty bound to keep all information confidential and are prohibited to share to those who are not legally authorized to receive the same. <br /><br />
+              We keep personal data for a period required by law and only for the fulfilment of the declared, specified, and legitimate purposes;<br /><br />
+              After which, personal data shall be disposed or discarded in a secure manner that would prevent further processing, unauthorized access, or disclosure to any other party or the public, or prejudice the interests of the data subjects.<br /><br />
+              Should you agree to the terms and conditions herein, kindly proceed logging-in, otherwise, access will be denied. 
+              
             </ion-item>
             <ion-item>
               <ion-grid *ngIf="origin == 'login'">
