updated login sequence, now using http://10.128.18.132/ API

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -37,7 +37,7 @@
                 expand="block"
                 shape="round"
                 id="btn-confirm"
-                (click)="checkPrivacyPolicy() "
+                (click)="checkUser()"
                 color="mango"
                 disabled="{{btnDisable}}"
               >{{this.constants.UI_COMPONENT_TEXT__VALUE__LOGIN.toUpperCase()}}
