login correction, and CSS changes

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -84,7 +84,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-router-outlet></ion-router-outlet>
+  <ion-router-outlet class="with-header"></ion-router-outlet>
 
   <div class="footer tab-font-family">
     <span>{{this.constants.CHH_NAME__VALUE__CEBU}}</span>
