--- a/src/app/chh-web-components/chh-app-privacy-policy/chh-app-privacy-policy.page.html
+++ b/src/app/chh-web-components/chh-app-privacy-policy/chh-app-privacy-policy.page.html
@@ -53,7 +53,7 @@
               <ion-grid *ngIf="origin == 'login'">
                 <ion-row>
                   <ion-col size-xs="12">
-                    <ion-checkbox  (ionChange)="accept($event)"></ion-checkbox> Accept
+                    <ion-checkbox id="acceptCheckBox" (ionChange)="accept($event)"></ion-checkbox> Accept
                   </ion-col>
               </ion-row>
               </ion-grid>
