addtional logic on login and change password

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -46,13 +46,18 @@
               </ion-button>
             </div>
           </ion-card-content>
+
+
+
+              
+    <ion-item lines="none" class="fontSize-12">
+      <p>{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO}} (<b><a href="tel: +63322338000">{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_TELEPHONE}}</a></b>). <br/> <br />{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_APP_VERSION}} {{this.constants.DOCTOR_PORTAL__VALUE__VERSION}}</p>
+    </ion-item>
         </ion-card>
       </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
 <ion-footer class="ion-no-border">
-  <ion-toolbar>
-    <p>{{this.constants.DOCTOR_PORTAL__VALUE__VERSION}}</p>
-  </ion-toolbar>
+
 </ion-footer>
