--- a/src/app/tab-settings/tab-settings.page.html
+++ b/src/app/tab-settings/tab-settings.page.html
@@ -123,7 +123,7 @@
               <!-- ADMITTED -->
                 <ion-item>
                   <ion-label class="ion-text-wrap"
-                    >Alert me through Push Notifications when my patient is admitted"</ion-label
+                    >{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_PUSH_NOTIFICATIONS_ADMITTED}}</ion-label
                   >
                   <ion-toggle
                     color="mango"
@@ -138,7 +138,7 @@
                 <!-- DISCHARGED -->
                 <ion-item>
                   <ion-label class="ion-text-wrap"
-                    >Alert me through Push Notifications when my patient is about to be discharged"</ion-label
+                    >{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_PUSH_NOTIFICATIONS_FOR_DISCHARGE}}</ion-label
                   >
                   <ion-toggle
                     color="mango"
