--- a/src/global.scss
+++ b/src/global.scss
@@ -75,7 +75,9 @@
    position: absolute; 
    display: block;  
 }
-
+  .fontSize-12{
+    font-size:12px
+  }
 .my-privacy-modal-css .modal-wrapper {
   height: 70%;
   width: 40%;
