--- a/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.html
+++ b/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.html
@@ -3,7 +3,7 @@
     class="in-toolbar ios toolbar-title-default hydrated"
     color="mango"
   >
-    <ion-title> <ion-icon name="lock-closed-outline"></ion-icon> Change Password </ion-title>
+    <ion-title> <ion-icon name="lock-closed-outline"></ion-icon> Update Password </ion-title>
     <!--ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
       <ion-button (click)="closeModal()" routerDirection="back" class="ios button button-clear ion-activatable ion-focusable hydrated">Close</ion-button>
     </ion-buttons-->
@@ -24,24 +24,17 @@
       <ion-col>
 
         <ion-card mode="ios"   >
+
+
           <ion-list>
-            <ion-input type="password" id="input-password" placeholder = "Old Password" [type]="getType1()"  [(ngModel)]="OldPassword"></ion-input>
-
-            <p>{{OldPassword}}</p>
-
-
-
-            <ion-item style="padding-top: 10px;">
-              <div class="ion-text-wrap"><b>Old Password</b><br /></div>
-            </ion-item>
-            <ion-item>
-              <ion-input type="password" id="input-password" placeholder = "Old Password" [type]="getType1()"  [(ngModel)]="OldPassword"></ion-input>
-              <ion-icon  name="eye-off-outline" [name]="getName1()" item-right   class="rectangle1"></ion-icon>
-            </ion-item>
+            Hi doc, for security Reasons we strongly recommend to update your default password to new password.
           </ion-list>
+
+
+
           <ion-list>
             <ion-item style="padding-top: 10px;">
-              <div class="ion-text-wrap"><b>New Password</b><br /></div>
+              <div class="ion-text-wrap pWord" #psWord1 id="pWord1" ><b>New Password</b> <i>{{errMessage}}</i><br /></div>
             </ion-item>
             <ion-item>
               <ion-input type="password" id="input-password" placeholder = "New Password" [type]="getType2()"  [(ngModel)]="NewPassword"></ion-input>
@@ -50,13 +43,39 @@
           </ion-list>
           <ion-list>
             <ion-item style="padding-top: 10px;">
-              <div class="ion-text-wrap"><b>Confirm Password</b><br /></div>
+              <div class="ion-text-wrap pWord" id="pWord2" #psWord2 ><b>Confirm Password</b><i>{{errMessage}}</i><br /></div>
             </ion-item>
             <ion-item>
               <ion-input type="password" id="input-password" placeholder = "Confirm Password" [type]="getType3()"  [(ngModel)]="ConfirmPassword"></ion-input>
               <ion-icon  name="eye-off-outline" [name]="getName3()" item-right   class="rectangle3"></ion-icon>
             </ion-item>
           </ion-list>
+          <ion-grid>
+            <ion-row>
+              <ion-col size-xs="6">
+                <ion-button
+                  expand="block"
+                  shape="round"
+                  id="btn-confirm"
+                  (click)="save()"
+                  color="mango"
+                >
+                  SAVE
+                </ion-button>
+              </ion-col>
+              <ion-col size-xs="6">
+                <ion-button
+                  expand="block"
+                  shape="round"
+                  id="btn-confirm"
+                  (click)="closeModal()"
+                  color="danger"
+                >
+                  CANCEL
+                </ion-button>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
         </ion-card>
 
 
