additonal logic on change password

--- a/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.html
+++ b/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.html
@@ -27,7 +27,9 @@
 
 
           <ion-list>
-            Hi doc, for security Reasons we strongly recommend to update your default password to new password.
+            <ion-item style="padding-top: 10px;">
+              {{this.constants.UI_COMPONENT_TEXT_VALUE_UPDATE_PASSWORD_HEADER}}  <br /><br />
+            </ion-item> 
           </ion-list>
 
 
