--- a/src/app/chh-web-components/chh-app-privacy-policy/chh-app-privacy-policy.page.html
+++ b/src/app/chh-web-components/chh-app-privacy-policy/chh-app-privacy-policy.page.html
@@ -30,23 +30,42 @@
          
           <ion-list>
             <ion-item style="padding-top: 10px;">
-              This is to inform you of our policies regarding the collection, use, storage, disclosure, and disposal of personal information we receive from the users.<br /><br />
-              Chong Hua Hospital is committed to ensuring that your personal information and/or the sensitive personal information of your patients are protected and secured. Should we ask you to provide certain information, by which you can be identified you can be assured that it will only be used in accordance with the law and this Data Privacy Notice. Moreover, you are prohibited to share your password or login details. <br /><br />
-              We shall use your personal information to provide you services.<br /><br />
-              For you to avail of our services, we may require you to submit sensitive personal information in order to process your online transactions, such as: <br /><br />
-              a. Full Name;<br />
-              b. Birth Date; <br />
-              c. Place of Birth;<br />
-              d. Home Address;<br />
-              e. Gender;<br />
-              f. Civil Status; <br /><br />
-              By using our services, you consent to the processing of your sensitive personal information in accordance with this Data Privacy Notice. <br /><br />
-              We are committed to ensuring the safety and security of your sensitive personal information.<br /><br />
-              Nevertheless, keep in mind that no method of transmission over the internet or method of electronic storage will guarantee full security. In order to prevent unauthorized access or disclosure, we have implemented physical, technical and organizational measures and procedures to safeguard the data we collect from you. While we use such means and methods to protect your personal data, we cannot guarantee its absolute security.<br /><br />
-              Please be informed also that you can access the laboratory and diagnostic results of your admitted patients, therefore you are duty bound to keep all information confidential and are prohibited to share to those who are not legally authorized to receive the same. <br /><br />
-              We keep personal data for a period required by law and only for the fulfilment of the declared, specified, and legitimate purposes;<br /><br />
-              After which, personal data shall be disposed or discarded in a secure manner that would prevent further processing, unauthorized access, or disclosure to any other party or the public, or prejudice the interests of the data subjects.<br /><br />
-              Should you agree to the terms and conditions herein, kindly proceed logging-in, otherwise, access will be denied. 
+              DATA PRIVACY NOTICE 
+<br /><br />
+This is to inform you of our policies regarding the collection, use, storage, disclosure, and disposal of personal information we receive from the users. 
+<br /><br />
+Chong Hua Hospital is committed to ensuring that your personal information and/or the sensitive personal information of your patients are protected and secured. Should we ask you to provide certain information, by which you can be identified, you can be assured that it will only be used in accordance with the law and this Data Privacy Notice. Moreover, you are prohibited to share your password or login details.  
+<br /><br />
+We shall use your personal information to provide you services. 
+<br /><br />
+For you to avail of our services, we may require you to submit sensitive personal information in order to process your online transactions, such as:   
+<br /><br />
+a. Full Name; <br />
+b. Birth Date;  <br />
+c. Home Address;  <br />
+d. Contact Numbers; <br />
+e. Gender; <br />
+f. Civil Status;  <br />
+<br />
+By using our services, you consent to the processing of your sensitive personal information in accordance with this Data Privacy Notice.  
+<br /><br />
+We are committed to ensuring the safety and security of your sensitive personal information. 
+<br /><br />
+Nevertheless, keep in mind that no method of transmission over the internet or method of electronic storage will guarantee full security. In order to prevent unauthorized access or disclosure, we have implemented physical, technical and organizational measures and procedures to safeguard the data we collect from you. While we use such means and methods to protect your personal data, we cannot guarantee its absolute security. 
+<br /><br />
+Please be informed also that you can access the laboratory and diagnostic results of your admitted patients, therefore you are duty bound to keep all information confidential and are prohibited to share to those who are not legally authorized to receive the same. 
+<br /><br />
+We keep personal data for a period required by law and only for the fulfilment of the declared, specified, and legitimate purposes; 
+<br /><br />
+After which, personal data shall be disposed or discarded in a secure manner that would prevent further processing, unauthorized access, or disclosure to any other party or the public, or prejudice the interests of the data subjects. 
+<br /><br />
+I will take full responsibility of the messages/notifications sent to the number I have registered with Chong Hua Hospital. Should the number be lost or changed, I will immediately inform Chong Hua Hospital to avoid unauthorized disclosure. Without the notification, Chong Hua Hospital shall not be liable for any disclosures sent to the registered number. 
+<br /><br />
+Should you agree to the terms and conditions herein, kindly proceed logging-in, otherwise, access will be denied. 
+
+ 
+
+ 
               
             </ion-item>
             <ion-item>
