--- a/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.html
+++ b/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.html
@@ -26,6 +26,36 @@
         <ion-card mode="ios"   >
 
 
+
+
+
+
+          <!--div [formGroup]="form">
+            <input type="password" formControlName="password"/>
+           </div>
+           <div class="errors" *ngIf="form.get('password').invalid && (form.get('password').touched || form.get('password').dirty)">
+            <div *ngIf="form.get('password').hasError('required')">
+              password is required
+            </div>
+            <div class="error-text" *ngIf="form.get('password').hasError('passwordStrength')">
+             {{form.get('password').errors['passwordStrength']}}
+            </div>
+            </div-->
+           
+           
+
+
+
+
+
+
+
+
+
+
+
+
+
           <ion-list>
             <ion-item style="padding-top: 10px;">
               {{this.constants.UI_COMPONENT_TEXT_VALUE_UPDATE_PASSWORD_HEADER}}  <br /><br />
@@ -34,7 +64,7 @@
 
 
 
-          <ion-list>
+          <!--ion-list>
             <ion-item style="padding-top: 10px;">
               <div class="ion-text-wrap pWord" #psWord1 id="pWord1" ><b>New Password</b> <i>{{errMessage}}</i><br /></div>
             </ion-item>
@@ -42,7 +72,30 @@
               <ion-input type="password" id="input-password" placeholder = "New Password" [type]="getType2()"  [(ngModel)]="NewPassword"></ion-input>
               <ion-icon  name="eye-off-outline" [name]="getName2()"item-right   class="rectangle2"></ion-icon>
             </ion-item>
-          </ion-list>
+          </ion-list-->
+          <ion-list>
+
+
+            <ion-item style="padding-top: 10px;">
+              <div class="ion-text-wrap pWord" #psWord1 id="pWord1" ><b>New Password</b> <i>{{errMessage}}</i><br /></div>
+            </ion-item>
+              <ion-item [formGroup]="form">
+          
+                <ion-input type="password" formControlName="password" placeholder = "New Password" [type]="getType2()"  [(ngModel)]="NewPassword"></ion-input>
+                <ion-icon  name="eye-off-outline" [name]="getName2()"item-right   class="rectangle2"></ion-icon>
+          
+              </ion-item>
+              <ion-item  class="errors" *ngIf="form.get('password').invalid && (form.get('password').touched || form.get('password').dirty)">
+                <div *ngIf="form.get('password').hasError('required')">
+                  password is required
+                </div >
+                <div  class="error-text" *ngIf="form.get('password').hasError('passwordStrength')">
+                 {{form.get('password').errors['passwordStrength']}}
+                </div >
+                </ion-item >
+              </ion-list>
+
+
           <ion-list>
             <ion-item style="padding-top: 10px;">
               <div class="ion-text-wrap pWord" id="pWord2" #psWord2 ><b>Confirm Password</b><i>{{errMessage}}</i><br /></div>
@@ -81,6 +134,7 @@
         </ion-card>
 
 
+         
        
       </ion-col>
     </ion-row>
