updated UI for strong password

--- a/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.scss
+++ b/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.scss
@@ -7,4 +7,13 @@
   .errors{
     color: red;
   }
+  .text-danger{
+    color: red;
+  }
+  .text-success{
+    color: #275228;
+  }
   
+  ion-item {
+    --min-height: 16px;
+  }
