--- a/src/global.scss
+++ b/src/global.scss
@@ -78,6 +78,9 @@
   .fontSize-12{
     font-size:12px
   }
+  .fontSize-14{
+    font-size:14px
+  }
 .my-privacy-modal-css .modal-wrapper {
   height: 70%;
   width: 40%;
