--- a/src/app/chh-web-components/chh-app-change-pass/chh-app-change-pass.page.scss
+++ b/src/app/chh-web-components/chh-app-change-pass/chh-app-change-pass.page.scss
@@ -8,3 +8,14 @@ small{
     color: red;
   }
   
+
+.text-danger{
+  color: red;
+}
+.text-success{
+  color: #275228;
+}
+
+ion-item {
+  --min-height: 16px;
+}
