changed RED to branding RED,changed Reset to Button.

--- a/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.scss
+++ b/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.scss
@@ -5,10 +5,10 @@
    margin-bottom:1rem; 
   }
   .errors{
-    color: red;
+    color: #D12027;
   }
   .text-danger{
-    color: red;
+    color: #D12027;
   }
   .text-success{
     color: #275228;
