--- a/src/app/chh-web-components/chh-app-change-pass/chh-app-change-pass.page.html
+++ b/src/app/chh-web-components/chh-app-change-pass/chh-app-change-pass.page.html
@@ -61,14 +61,14 @@
                 <ion-icon name="{{ frmSignup.controls['password'].hasError('required') ||
                 frmSignup.controls['password'].hasError('minlength') ? 'close-outline' :
                 'checkmark-outline' }}"></ion-icon>
-                Must be at least 8 characters!<br />
+                Must be at least 8 characters.<br />
               </ion-item>
 
               <ion-item   lines="none" class="ion-text-wrap fontSize-14"  [ngClass]="frmSignup.controls['password'].hasError('required') || frmSignup.controls['password'].hasError('hasNumber')  ? 'text-danger' : 'text-success'">
                 <ion-icon name="{{ frmSignup.controls['password'].hasError('required') ||
                 frmSignup.controls['password'].hasError('hasNumber') ? 'close-outline' :
                 'checkmark-outline' }}"></ion-icon>
-                Must contain at least 1 number!<br />
+                Must contain at least 1 number.<br />
               </ion-item>
 
 
@@ -77,7 +77,7 @@
                 <ion-icon name="{{ frmSignup.controls['password'].hasError('required') ||
                 frmSignup.controls['password'].hasError('hasCapitalCase') ?  'close-outline' :
                 'checkmark-outline' }}"></ion-icon>
-                Must contain at least 1 in Capital Case!<br />
+                Must contain at least 1 Letter in Capital Case<br />
               </ion-item>
 
 
@@ -85,7 +85,7 @@
                 <ion-icon name="{{ frmSignup.controls['password'].hasError('required') ||
                 frmSignup.controls['password'].hasError('hasSmallCase') ?   'close-outline' :
                 'checkmark-outline' }}"></ion-icon>
-                Must contain at least 1 Letter in Small Case!<br />
+                Must contain at least 1 Letter in Small Case.<br />
               </ion-item>
 
 
@@ -93,7 +93,7 @@
                 <ion-icon name="{{ frmSignup.controls['password'].hasError('required') ||
                 frmSignup.controls['password'].hasError('hasSpecialCharacters') ?  'close-outline' :
                 'checkmark-outline' }}"></ion-icon>
-                Must contain at least 1 Special Character!<br />
+                Must contain at least 1 Special Character.<br />
               </ion-item>
 
               </ion-list>
