--- a/src/app/chh-web-components/chh-app-change-pass/chh-app-change-pass.page.scss
+++ b/src/app/chh-web-components/chh-app-change-pass/chh-app-change-pass.page.scss
@@ -5,12 +5,12 @@ small{
    margin-bottom:1rem; 
   }
   .errors{
-    color: red;
+    color: #D12027;
   }
   
 
 .text-danger{
-  color: red;
+  color: #D12027;
 }
 .text-success{
   color: #275228;
